--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
   # Install python 3.11
   - sudo apt-get update
-  - sudo apt-get install python3.11 python3.11-venv python3.11-dev
+  - sudo apt-get install -y software-properties-common
+  - sudo add-apt-repository ppa:deadsnakes/ppa
+  - sudo apt-get update
+  - sudo apt-get install -y python3.11 python3.11-venv python3.11-dev
   - sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1
   # Download and install google cloud sdk
   - curl https://sdk.cloud.google.com | bash > /dev/null;
