--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   # Install python 3.11
   - sudo apt-get update
   - sudo apt-get install -y software-properties-common
-  - sudo add-apt-repository ppa:deadsnakes/ppa
+  - sudo add-apt-repository -y ppa:deadsnakes/ppa
   - sudo apt-get update
   - sudo apt-get install -y python3.11 python3.11-venv python3.11-dev
   - sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1
